# zeus_audio

./: .gitignore  MANIFEST.in  flake.nix  module.nix  release.nix  setup.py
audio_server/: Cargo.nix  Cargo.toml  audio.py  audio_server.proto  build.rs  crates-io.nix  default.nix  server.py  shell.nix  xos_westwater_remote.py
audio_server/audio_server_proto/: Cargo.toml  build.rs
audio_server/audio_server_proto/src/: audio_server.rs  audio_server_grpc.rs  empty.rs  lib.rs  timestamp.rs
audio_server/src/: audio.rs  clock.rs  lib.rs  main.rs  manager.rs  server.rs
audio_server/src/audio/: mio.rs  mod.rs  tee.rs  timestamp.rs  tokio.rs  wav.rs
audio_server/src/proto/: audio_recorder.protos.rs  mod.rs
audio_server/src/protos/: audio_server.rs  audio_server_grpc.rs  empty.rs  timestamp.rs
protos/audio_recorder/protos/: audio_server.proto
web_interface/: MANIFEST.in  __init__.py  controller.py  default.nix  run.py  setup.py  shell.nix
web_interface/audio_recorder/audio_server/: audio.py  server.py
web_interface/audio_recorder/protos/: audio_server_pb2.py  audio_server_pb2_grpc.py
web_interface/audio_recorder/web_interface/: __init__.py  controller.py  run.py
web_interface/audio_recorder/web_interface/static/js/: audio-server.js  common.js  recorder.js
web_interface/audio_recorder/web_interface/templates/: base.html  index.html
web_interface/static/css/: common.css  vu-meter.css
web_interface/static/js/: audio-server.js  recorder.js
web_interface/templates/: base.html  index.html
