[package]
name = "audio_server_proto"
version = "0.3.1"
authors = ["Ben Wolsieffer <benwolsieffer@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1"
protobuf = "2"
grpcio = { version = "0", default-features = false, features = ["protobuf-codec"] }

[build-dependencies]
protoc-grpcio = "1"